tests/ui-nightly/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: zerocopy::NoCell` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-nocell.rs:23:31
   |
23 | const DST_NOT_NO_CELL: &Dst = transmute_ref!(&AU16(0));
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^
   |                               |
   |                               the trait `zerocopy::NoCell` is not implemented for `Dst`
   |                               required by a bound introduced by this call
   |
   = help: the following other types implement trait `zerocopy::NoCell`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             Box<T>
             F32<O>
           and $N others
note: required by a bound in `AssertDstIsNoCell`
  --> tests/ui-nightly/transmute-ref-dst-not-nocell.rs:23:31
   |
23 | const DST_NOT_NO_CELL: &Dst = transmute_ref!(&AU16(0));
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsNoCell`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
